// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands eject ejects 1`] = `
Array [
  Object {
    "content": "# updated here
ui.global/footer: |
  Footer here
# English Here...
menu/hello: |
  This is a translated key
# original title here
sub/welcome/items__test__title: |
  This is the title!
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "home:
  title: ホーム
about:
  title: 約
news:
  title: ニュース
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "## I exist already
",
    "fileName": "test/data/test-content/sub/existing.en.md",
  },
  Object {
    "content": "## It wont be created
",
    "fileName": "test/data/test-content/sub/existing.ja.md",
  },
  Object {
    "content": "---
title: Test title
tags: ['a', 'b', 'c']
description: Description goes here
---

## I am some markdown. Please translate me!

Markdown is a lightweight markup language with plain-text-formatting syntax. Its design allows it to be converted to many output formats, but the original tool by the same name only supports HTML. [Markdown](https://en.wikipedia.org/wiki/Markdown) is often used to format readme files, for writing messages in online discussion forums, and to create rich text using a plain text editor.

Since the initial description of Markdown contained ambiguities and unanswered questions, the implementations that appeared over the years have subtle differences and many come with syntax extensions.
",
    "fileName": "test/data/test-content/sub/index.en.md",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "intro: このサブフォルダへようこそ
description: これは翻訳されない説明です
items:
  test:
    title: |
      This is the title!
  hello:
    title: ハローワーク
",
    "fileName": "test/data/test-content/sub/welcome.ja.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "title: 題名
description: これは説明です
new: いくつかの新しいキー
body: |
  ## これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;

exports[`commands export exports 1`] = `
Array [
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,home__title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,about__title,About,約,
aXUvIxOy8B,menu.ja.yaml,news__title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items__test__title,Testing,\\"This is the title!
\\",
UJJQgXm1Ai,sub/welcome.ja.yaml,items__hello__title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,いくつかの新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"## これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/test-csv/ja.csv",
  },
]
`;

exports[`commands generate generates 1`] = `
Array [
  Object {
    "content": "
# Home
menu/home__title: |-
  ホーム

# About
menu/about__title: |-
  約

# News
menu/news__title: |-
  ニュース

# Welcome to this sub folder
sub/welcome/intro: |-
  このサブフォルダへようこそ

# This is a description that won't be translated
sub/welcome/description: |-
  これは翻訳されない説明です

# Testing
sub/welcome/items__test__title: |
  This is the title!

# Hello Work
sub/welcome/items__hello__title: |-
  ハローワーク

# Title
ui.global/title: |-
  題名

# This is a description
ui.global/description: |-
  これは説明です

# Some new key
ui.global/new: |-
  いくつかの新しいキー

# ## This is some markdown
# 
# How is this?
ui.global/body: |
  ## これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "## I exist already
",
    "fileName": "test/data/test-content/sub/existing.en.md",
  },
  Object {
    "content": "## It wont be created
",
    "fileName": "test/data/test-content/sub/existing.ja.md",
  },
  Object {
    "content": "---
title: Test title
tags: ['a', 'b', 'c']
description: Description goes here
---

## I am some markdown. Please translate me!

Markdown is a lightweight markup language with plain-text-formatting syntax. Its design allows it to be converted to many output formats, but the original tool by the same name only supports HTML. [Markdown](https://en.wikipedia.org/wiki/Markdown) is often used to format readme files, for writing messages in online discussion forums, and to create rich text using a plain text editor.

Since the initial description of Markdown contained ambiguities and unanswered questions, the implementations that appeared over the years have subtle differences and many come with syntax extensions.
",
    "fileName": "test/data/test-content/sub/index.en.md",
  },
  Object {
    "content": "---
title: 試験タイトル
description: ここに説明が入ります
---

## 私はいくつかの値下げです。翻訳してください!

Markdownは、プレーンテキスト形式の構文を持つ軽量のマークアップ言語です。その設計により、多くの出力形式に変換できますが、同じ名前の元のツールはHTMLのみをサポートします。 [Markdown](https://en.wikipedia.org/wiki/Markdown)は、readmeファイルのフォーマット、オンラインディスカッションフォーラムでのメッセージの書き込み、プレーンテキストエディターを使用したリッチテキストの作成によく使用されます。

Markdownの最初の説明にはあいまいさと未回答の質問が含まれていたため、長年にわたって登場した実装には微妙な違いがあり、その多くに構文拡張が付属しています。
",
    "fileName": "test/data/test-content/sub/index.ja.md",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
]
`;

exports[`commands import imports 1`] = `
Array [
  Object {
    "content": "# updated here
ui.global/footer: |
  Footer here
# English Here...
menu/hello: |
  This is a translated key
# original title here
sub/welcome/items__test__title: |
  This is the title!
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "home:
  title: Test update
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "## I exist already
",
    "fileName": "test/data/test-content/sub/existing.en.md",
  },
  Object {
    "content": "## It wont be created
",
    "fileName": "test/data/test-content/sub/existing.ja.md",
  },
  Object {
    "content": "---
title: Test title
tags: ['a', 'b', 'c']
description: Description goes here
---

## I am some markdown. Please translate me!

Markdown is a lightweight markup language with plain-text-formatting syntax. Its design allows it to be converted to many output formats, but the original tool by the same name only supports HTML. [Markdown](https://en.wikipedia.org/wiki/Markdown) is often used to format readme files, for writing messages in online discussion forums, and to create rich text using a plain text editor.

Since the initial description of Markdown contained ambiguities and unanswered questions, the implementations that appeared over the years have subtle differences and many come with syntax extensions.
",
    "fileName": "test/data/test-content/sub/index.en.md",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "body: |-
  ## Multi Line

  Test
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;

exports[`commands import merges correctly 1`] = `
Array [
  Object {
    "content": "# updated here
ui.global/footer: |
  Footer here
# English Here...
menu/hello: |
  This is a translated key
# original title here
sub/welcome/items__test__title: |
  This is the title!
",
    "fileName": "test/data/test-content/_i18n/ja.yaml",
  },
  Object {
    "content": "- key: home
  title: Home
  link: /
- key: about
  title: About
  link: /about
- key: news
  title: News
  link: /news
",
    "fileName": "test/data/test-content/menu.en.yaml",
  },
  Object {
    "content": "home:
  title: Test update
",
    "fileName": "test/data/test-content/menu.ja.yaml",
  },
  Object {
    "content": "## I exist already
",
    "fileName": "test/data/test-content/sub/existing.en.md",
  },
  Object {
    "content": "## It wont be created
",
    "fileName": "test/data/test-content/sub/existing.ja.md",
  },
  Object {
    "content": "---
title: Test title
tags: ['a', 'b', 'c']
description: Description goes here
---

## I am some markdown. Please translate me!

Markdown is a lightweight markup language with plain-text-formatting syntax. Its design allows it to be converted to many output formats, but the original tool by the same name only supports HTML. [Markdown](https://en.wikipedia.org/wiki/Markdown) is often used to format readme files, for writing messages in online discussion forums, and to create rich text using a plain text editor.

Since the initial description of Markdown contained ambiguities and unanswered questions, the implementations that appeared over the years have subtle differences and many come with syntax extensions.
",
    "fileName": "test/data/test-content/sub/index.en.md",
  },
  Object {
    "content": "intro: Welcome to this sub folder
description: This is a description that won't be translated
items:
  - key: test
    title: Testing
  - key: hello
    title: Hello Work
",
    "fileName": "test/data/test-content/sub/welcome.en.yaml",
  },
  Object {
    "content": "title: Title
description: This is a description
new: Some new key
body: |
  ## This is some markdown

  How is this?
",
    "fileName": "test/data/test-content/ui.global.en.yaml",
  },
  Object {
    "content": "body: |-
  ## Multi Line

  Test
",
    "fileName": "test/data/test-content/ui.global.ja.yaml",
  },
]
`;
